--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -61,7 +61,7 @@
 
 {% if course_dict %}
 <h1 class="text-3xl font-semibold text-center">Sections</h2>
-<div class="flex flex-wrap">
+<div class="flex flex-wrap justify-center">
     <div class="p-4 mt-4">
 
         {% for course, course_sections in course_dict.items %}
